Add ER driver app React build in MVC project

--- a/Appology.MVC/Views/Shared/_MenuHeader.cshtml
+++ b/Appology.MVC/Views/Shared/_MenuHeader.cshtml
@@ -94,6 +94,11 @@
                                             <i class="fas fa-user-edit"></i> New Order
                                         </a>
                                     </li>
+                                    <li>
+                                        <a style="@(Model.MenuItem.ERDriverApp ? "color:#09c" : "")" href="@Url.MvcRouteUrl(Section.ErrandRunnerDriverApp)">
+                                            <i class="fas fa-car"></i> Driver App
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
                         }
